--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,298 @@
-.App {
-  text-align: center;
+.app {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    font-weight: 300;
+    background: #222;
+    top: 0;
+    left: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    padding: 10px;
+    color: #ff5722;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: .2em;
+    font-size: 12px;
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content {
+    display: flex;
+    flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.settings {
+    width: 30%;
+    max-width: 350px;
+    background: #222222;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.settings .setting {
+    height: 11%;
+    padding: 0 20px;
+    margin-top: 20px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.settings .setting label {
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    font-size: 12px;
+    letter-spacing: .2em;
+    opacity: .5; 
+}
+
+.settings .setting input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.filter {
+    flex: 1;
+}
+
+.filter .image-container {
+    position: relative;
+    background-size: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    transition: filter .125s ease;
+}
+
+.filter .image {
+    color: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+}
+
+.filter-list {
+    display: flex;
+    width: 100%;
+    height: calc(15% - 25px);
+    background: rgb(62, 65, 69);
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+.filter-list .filter {
+    flex: 1;
+    margin-right: 20px;
+    background: #353535;
+    cursor: pointer;
+    border: 2px solid transparent;
+}
+
+.filter-list .filter:last-child {
+    margin-right: 0px;
+}
+
+.filter-list .filter:hover {
+    border: 2px solid #cc7a6f;
+}
+
+.filter-list .filter.selected {
+    border: 2px solid #cc7a6f;
+}
+
+.url{
+    border: 1px solid rgba(255, 87, 34, 0.64);
+}
+.urlInput{
+    padding-left: 20px;
+    height: 40px;
+    width: 63%;
+    background-color: #222;
+    border: none;
+    outline: none;
+    color: white;
+}
+.urlInput::placeholder{
+    color: #909090;
+}
+
+
+.urlButton{
+    outline: 0 !important;
+    height: 40px;
+    width: 30%;
+    color: #ff5722;
+    background-color: #222;
+    border: 1px;
+    transition: 0.2s;
+    font-size: 18px;
+}
+
+
+.urlButton:hover{
+    background-color:#0d0d0d;
+}
+
+.closure{
+    display: flex;
+    margin-top: 10px;
+    border: 1px solid rgba(255, 87, 34, 0.64);
+}
+.file_upload{
+    width: 50%;
+    position: relative;
+    height: 40px;
+    font-size: 18px;
+}
+
+#file{
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+}
+.label{
+    cursor: pointer;
+    background-color: #222222;
+    width: 100%;
+    text-align: center;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ff5722;
+    transition: 0.2s;
+}
+.label:hover{
+    background-color: #0d0d0d;
+}
+
+.label_btn{
+    width: 50%;
+    background-color: #222222;
+    border: none;
+    height: 40px;
+    color: #ff5722;
+    border-left:1px solid rgba(255, 87, 34, 0.64);
+    outline: 0 !important;
+    transition: 0.2s;
+    cursor: pointer;
+    font-size: 18px;
+}
+.label_btn:hover{
+    background-color: #0d0d0d;
+}
+
+
+
+
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 18px 0;
+    width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #ff5722;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #868686;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -14px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ff5722;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #ff5722;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #ff5722;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+    background: #ff5722;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #ff5722;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #ff5722;
+}
+
+@media screen and (max-height: 1000px){
+    .settings .setting {height: 13%;}
 }
